packages/typ/tests/fixtures/diagnostics/0290_fun_higher_order_callback_mismatch_05.ml.expected
File "0290_fun_higher_order_callback_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0290_fun_higher_order_callback_mismatch_05 is not a valid module name.

File "0290_fun_higher_order_callback_mismatch_05.ml", line 2, characters 35-36:
2 | let _ = apply_epsilon (fun b -> if b then 4 else 5)
                                       ^
Error: The value b has type int but an expression was expected of type 
       bool because it is in the condition of an if-statement
